--- a/styles.css
+++ b/styles.css
@@ -97,19 +97,7 @@ article {
     gap: 8px;
     width: 100%;
     padding: 4px;
-}
-
-#unitName {
-    text-align: center;
-    width: 100%;
-}
-
-#someInformation {
-    width: 100%;
-    background-color: var(--bg-color3);
-    border: 1px solid var(--border-color3);
-    border-radius: 4px;
-    padding: 2px;
+    height: 100%;
 }
 
 #contentList {
@@ -125,4 +113,9 @@ article {
 
 #contentList > li:last-child {
     border-bottom: none;
+}
+
+iframe {
+    width: 100%;
+    height: 100%;
 }
