--- a/unitCommonStyles.css
+++ b/unitCommonStyles.css
@@ -6,6 +6,10 @@
     box-sizing: border-box;
 }
 
+h3, h4, div {
+    padding: 4px;
+}
+
 #unitName {
     text-align: center;
     width: 100%;
@@ -25,8 +29,13 @@
     border-radius: 4px;
 }
 
+h2 {
+    background: linear-gradient(#aa96f3, #fac6d5, #aa96f3);
+}
+
 h3 {
     text-transform: uppercase;
+    background: linear-gradient(#f396b2, #fac6d5, #f396b2);
 }
 
 h4 {
@@ -35,11 +44,17 @@ h4 {
 
 dt {
     font-weight: bold;
+    border-left: 4px groove orange;
+    border-radius: 6px;
+    padding: 4px;
 }
 
 dd {
     font-style: italic;
     margin-left: 4ch;
+    border-left: 4px groove rgb(200, 255, 0);
+    border-radius: 6px;
+    padding: 4px;
 }
 
 .example {
@@ -60,13 +75,47 @@ dd {
 table {
     border: 1px solid black;
     border-collapse: collapse;
+    max-width: 100%;
 }
 
-tr, td, th {
+tr, td {
     border: 1px solid black;
     padding: 4px 8px;
 }
 
+th {
+    border: 2px solid black;
+    padding: 4px 8px;
+    background-color: #f8c6d5;
+}
+
+tr:nth-child(even) {
+    background-color: #faeff2;
+}
+
 li {
     margin: 12px 4px;
+}
+
+.srcFile > pre .language-javascript {
+    max-height: 400px;
+    overflow-y: auto;
+    width: 90%;
+    border-right: 2px solid red;
+}
+
+pre {
+    white-space: pre-wrap;
+    overflow-x: auto;
+}
+
+@media print {
+    .srcFile > pre .language-javascript {
+        max-height: 100%;
+        width: 98%;
+    }
+    pre {
+        white-space: pre-wrap;
+        overflow-x: auto;
+    }
 }
