--- a/unitCommonStyles.css
+++ b/unitCommonStyles.css
@@ -97,25 +97,28 @@ li {
     margin: 12px 4px;
 }
 
-.srcFile > pre .language-javascript {
+pre {
+    white-space: pre-wrap;
+    overflow-x: auto;
+}
+
+.srcFile > pre > .language-javascript,
+.srcFile > pre > .language-json {
     max-height: 400px;
     overflow-y: auto;
     width: 90%;
     border-right: 2px solid red;
 }
 
-pre {
-    white-space: pre-wrap;
-    overflow-x: auto;
-}
-
 @media print {
-    .srcFile > pre .language-javascript {
-        max-height: 100%;
-        width: 98%;
-    }
     pre {
         white-space: pre-wrap;
         overflow-x: auto;
+    }
+
+    .srcFile > pre .language-javascript,
+    .srcFile > pre > .language-json {
+        max-height: 100%;
+        width: 98%;
     }
 }
