--- a/unitCommonStyles.css
+++ b/unitCommonStyles.css
@@ -4,6 +4,7 @@
 
 * {
     box-sizing: border-box;
+    line-height: 1.1rem;
 }
 
 h3, h4, div {
@@ -13,14 +14,6 @@ h3, h4, div {
 #unitName {
     text-align: center;
     width: 100%;
-}
-
-#someInformation {
-    width: 100%;
-    background-color: var(--bg-color3);
-    border: 1px solid var(--border-color3);
-    border-radius: 4px;
-    padding: 2px;
 }
 
 #readTimeDiv {
@@ -121,4 +114,20 @@ pre {
         max-height: 100%;
         width: 98%;
     }
+}
+
+mjx-container,
+.calculation {
+    border: 1px dotted green;
+    padding: 1px 4px;
+    background-color: #f8eee3;
+}
+
+.calculation {
+    line-height: 0.8rem;
+}
+
+.calculation > mjx-container {
+    border: unset;
+    line-break: 0.8rem;
 }
